# aquasentry

./: .replit  pyproject.toml  replit.md
attached_assets/: Pasted-I-have-an-existing-project-called-AquaSentry-Live-Repl-_1765196872212.txt
backend/: main.py
backend/data/: data.json  users.json
backend/models/: alert.py  reading.py  tank.py
backend/services/: ai_copilot_service.py  ai_prediction_service.py  ai_service.py  analytics_service.py  auth_service.py  gis_service.py  map_service.py  tank_service.py  vision_ai_service.py
backend/utils/: json_loader.py
frontend/: alerts.html  copilot.html  dashboard.html  index.html  login.html  maintenance.html  map.html  offline.html  recommendations.html  sw.js  vision.html
frontend/css/: styles.css
frontend/js/: ai-features.js  api.js  auth.js  charts.js  dashboard.js  maps.js  recommendations.js
