[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.124.0",
    "google-genai>=1.53.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
